# pitwall

./: .editorconfig  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: redis.py  supabase.py
backend/app/ingestion/: __init__.py  _helpers.py  fastf1_ingest.py  generate_knowledge.py  jolpica_ingest.py  rag_ingest.py
backend/app/llm/: base.py  factory.py  groq.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  prompt.py  query_embedder.py  retriever.py
backend/knowledge/circuits/: monaco.md  monza.md  silverstone.md  spa.md  suzuka.md
backend/knowledge/drivers/: albon.md  alonso.md  antonelli.md  arvid_lindblad.md  bearman.md  bortoleto.md  bottas.md  colapinto.md  gasly.md  hadjar.md  hamilton.md  hulkenberg.md  lawson.md  leclerc.md  max_verstappen.md  norris.md  ocon.md  perez.md  piastri.md  russell.md  sainz.md  stroll.md
backend/knowledge/explainers/: drs-explained.md  glossary.md  race-strategy-101.md
backend/knowledge/history/: iconic-races.md
backend/knowledge/races/: 2018-r01-albert_park.md  2018-r02-bahrain.md  2018-r03-shanghai.md  2018-r04-baku.md  2018-r05-catalunya.md  2018-r06-monaco.md  2018-r07-villeneuve.md  2018-r08-ricard.md  2018-r09-red_bull_ring.md  2018-r10-silverstone.md  2018-r11-hockenheimring.md  2018-r13-spa.md  (+164 more)
backend/scripts/: ingest_knowledge.py  seed_database.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_ingestion.py  test_llm_factory.py  test_rag.py
(+129 files in other folders)
